--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,35 @@
-# --- Core ---
-streamlit>=1.37.0
-pandas>=2.2.3
-numpy>=1.26.4
-pillow>=10.4.0
-requests>=2.32.3
-python-dotenv>=1.0.1
-rich>=13.9.4
-tqdm>=4.66.4
+# Core Framework
+streamlit==1.31.0
 
-# --- Backend / DB ---
-psycopg2-binary>=2.9.9
-SQLAlchemy>=2.0.25
-redis>=5.0.1
+# AI/ML Services
+google-generativeai==0.8.3
+google-genai==0.2.2
+google-auth==2.41.1
 
-# --- Pydantic & Config ---
-pydantic>=2.7.4
-pydantic-settings>=2.3.4
-typing_extensions>=4.12.2
+# Database & ORM
+SQLAlchemy==2.0.25
+psycopg2-binary==2.9.9
 
-# --- Google Generative AI ---
-google-generativeai>=0.8.3
-google-api-core>=2.26.0
-google-api-python-client>=2.185.0
-google-auth>=2.41.0
-google-auth-httplib2>=0.2.0
-googleapis-common-protos>=1.63.0
-grpcio>=1.63.0
-grpcio-status>=1.63.0
-proto-plus>=1.26.0
-protobuf>=4.25.3
+# Redis Session Management
+redis==5.0.1
 
-# --- Streamlit deps ---
-altair>=5.3.0
-pydeck>=0.9.1
-validators>=0.22.0
-watchdog>=4.0.0
+# Configuration & Validation
+pydantic==2.6.1
+pydantic-settings==2.1.0
+python-dotenv==1.0.1
 
-# --- Utils / Security ---
-bcrypt>=4.1.2
-pyjwt>=2.9.0
+# Image Processing
+Pillow==10.2.0
 
-# --- Build Tools ---
-setuptools>=68.0.0
-wheel>=0.42.0
+# Data Processing
+pandas==2.3.3
+PyYAML==6.0.1
+
+# Security
+bcrypt==4.1.2
+email-validator==2.3.0
+pyjwt
+
+# Utilities
+requests==2.32.5
+tenacity==8.5.0
