--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,14 @@ REDIS_URL=redis://localhost:6379/0
 REDIS_TTL=1800
 
 # Storage
-STORAGE_TYPE=local
+STORAGE_TYPE=supabase  # Options: local, supabase
 STORAGE_PATH=./data/images
+
+# Supabase Storage
+# Get your project URL and anon key from: https://supabase.com/dashboard/project/_/settings/api
+SUPABASE_URL=https://[PROJECT-REF].supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key-here
+SUPABASE_BUCKET_NAME=arbor_images
 
 # Gemini API
 GEMINI_API_KEY=your_gemini_api_key_here
